--- a/camila/styles.css
+++ b/camila/styles.css
@@ -32,7 +32,7 @@
     justify-content: space-between;
     align-items:center ;
     padding: 10px 40px;
-    background-color: green;
+    background-color: #37a554;
     width: 1440px;
     height: 200px;
 } 
